done big stuff to damage system