@@ -6,18 +6,18 @@ import com.gsc.bm.server.model.cards.AbstractCard;
 import com.gsc.bm.server.model.game.Game;
 import com.gsc.bm.server.model.game.Move;
 
-import java.util.Collections;
 import java.util.Map;
 
-public class Glare extends AbstractCard {
+public class RottenBeer extends AbstractCard {
 
-    public Glare() {
-        super("PAZIENZA FINITA::::", "danni subiti x1.5 in questo turno, ma violenza +30 alertness +20");
+    public RottenBeer() {
+        super("Peroni da 66, calda", "+5 tasso alcolemico, +5 violenza, " +
+                "prossimi danni x1.5 perché gliela tiri in testa");
     }
 
     @Override
     public Map<Resource, Integer> getCost() {
-        return Collections.emptyMap();
+        return Map.of(Resource.ALERTNESS, 5);
     }
 
     @Override
@@ -25,16 +25,16 @@ public class Glare extends AbstractCard {
         // TODO consider status!! occasion to finally consider damage type
         game.getSelf(move).getCharacter().getStatuses().add(
                 new Status(
-                        Status.StatusType.BAD,
-                        Resource.HEALTH,
+                        Status.StatusType.GOOD,
+                        Resource.DAMAGE_MOD,
                         1,
                         (damage) -> damage + (damage / 2)
                 )
         );
         return new CardResolutionReport(
                 Map.ofEntries(
-                        game.getSelf(move).getCharacter().gainResource(Resource.VIOLENCE, 30),
-                        game.getSelf(move).getCharacter().gainResource(Resource.ALERTNESS, 20)
+                        game.getSelf(move).getCharacter().gainResource(Resource.ALCOHOL, 5),
+                        game.getSelf(move).getCharacter().gainResource(Resource.VIOLENCE, 5)
                 ),
                 null
         );
